Add new cells to RAG notebook

--- a/RAG/RAG_App.ipynb
+++ b/RAG/RAG_App.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9dab39c7",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "📁 Loading CSV file: assets/filtered_data.csv\n",
+      "📁 Loading CSV file: ../assets/filtered_data.csv\n",
       "📊 Rows: 2302, Columns: 9\n",
-      "📚 Created 2302 documents\n",
+      "📚 Created 2302 documents\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_191071/4202379530.py:41: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaEmbeddings``.\n",
+      "  embeddings = OllamaEmbeddings(model=\"nomic-embed-text\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "✅ Vector store created successfully\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_191071/4202379530.py:61: LangChainDeprecationWarning: The class `Ollama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the `langchain-ollama package and should be used instead. To use it run `pip install -U `langchain-ollama` and import as `from `langchain_ollama import OllamaLLM``.\n",
+      "  llm = Ollama(model=\"llama3.2:1b\")\n"
      ]
     }
    ],
@@ -31,7 +53,7 @@
     "# -----------------------------\n",
     "# 2️⃣ Load CSV\n",
     "# -----------------------------\n",
-    "csv_path = \"./assets/filtered_data.csv\"\n",
+    "csv_path = \"../assets/filtered_data.csv\"\n",
     "\n",
     "print(f\"📁 Loading CSV file: {csv_path}\")\n",
     "df = pd.read_csv(csv_path)\n",
@@ -113,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "2c8aa7c0",
    "metadata": {},
    "outputs": [],
@@ -128,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "5338a19e",
    "metadata": {},
    "outputs": [
@@ -137,16 +159,17 @@
      "output_type": "stream",
      "text": [
       "Answer:\n",
-      "The data type of each column can be determined by examining their names and values.\n",
+      "Based on the provided CSV data, it appears that \"information\" can be broken down into several categories:\n",
       "\n",
-      "*   Natural: A variable that can hold any numeric value.\n",
-      "*   Storm: A categorical variable with no numeric or textual representation.\n",
-      "*   Sint Maarten (Dutch part): A categorical variable with two possible values.\n",
-      "*   SXM: A variable containing a single value, but it's not clear if this is an index, category, or something else. However, I'll consider it as a categorical variable for the purpose of this analysis.\n",
-      "*   4 and 32 are numerical values that can hold any type of numeric data.\n",
-      "*   Flood: Another categorical variable with no numeric representation.\n",
+      "1. **Location**: The columns \"Natural\", \"Sint Maarten (Dutch part)\", \"SXM\", and \"IDN\" contain location names or codes for various geographic regions.\n",
+      "2. **Event/Catagory**: Columns like \"Storm\", \"Volcanic activity\", and \"Flood\" store information about different types of events or phenomena.\n",
+      "3. **Year/Date**: The columns \"2017\", \"2018\", \"2022\", and \"2014\" indicate the year or date for each occurrence.\n",
       "\n",
-      "So, this dataset appears to contain information about natural phenomena (storms, floods), volcanic activity, island locations, and population statistics.\n"
+      "These categories can be grouped into three main areas:\n",
+      "\n",
+      "1. Geographic Information (Location)\n",
+      "2. Event/Catagory\n",
+      "3. Date/Time (Year or Date)\n"
      ]
     }
    ],
@@ -242,6 +265,147 @@
    ],
    "source": [
     "answer = ask(\"Summarize the total damage for all countries.\")\n",
+    "print(f\"Answer:\\n{answer}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7b4b8956",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📁 Vector database folder: ./vector_db\n",
+      "✅ Chroma vector store created at: ./vector_db/chroma_db\n",
+      "Answer (Chroma):\n",
+      "From the provided CSV data:\n",
+      "\n",
+      "- The first column 'Natural' likely represents a natural disaster type (e.g., Flood, Earthquake, Storm).\n",
+      "- The second column 'Flood' contains flood-related data.\n",
+      "- The third column 'Viet Nam' appears to be related to Vietnam or Southeast Asia.\n",
+      "- The fourth column 'VNM' is the Vietnamese acronym for Vietnam.\n",
+      "- The fifth column '1' indicates a single entry in each row.\n",
+      "- The sixth column '424' seems to hold some value, but its meaning isn't clear without additional context.\n",
+      "- The seventh column '2017' contains information about the year of data collection or the event's occurrence in 2017.\n",
+      "- The eighth column '2992.071532' likely holds a specific measurement related to events in Vietnam.\n",
+      "- The ninth column '229877.4' is also related to Vietnam and seems to hold some numerical value, possibly indicating area measurements.\n",
+      "- The tenth column '1' again indicates a single entry per row.\n",
+      "- The eleventh column '424' appears to be an identifier or code for each data point in the dataset.\n",
+      "- The twelfth column '2018' contains information about another year (or event) with a similar numerical value as before, possibly referring to Vietnam.\n",
+      "- The thirteenth column '3902.661676' holds a measurement related to events in Indonesia.\n",
+      "- The fourteenth column '38834.05293' is also related to specific measurements for Indonesia.\n",
+      "- The fifteenth column 'Germany' represents the country of origin (or Germany) for some data points, including the storms mentioned.\n",
+      "- The sixteenth column '2' indicates a single entry per row.\n",
+      "- The seventeenth column '596963' appears to contain measurement values, likely related to Japan's natural disasters or environmental changes.\n",
+      "- The eighteenth column 'Strom' seems like an abbreviation or shortened form of 'Storm', possibly for storms in other countries (or the same country but not Germany).\n",
+      "- The nineteenth column 'Japan' represents another country with its respective data points or measurements.\n",
+      "- The twentieth column '2' indicates a single entry per row, likely referring to additional information about Japan's natural disasters or environmental changes.\n",
+      "\n",
+      "Therefore, the dataset appears to store various pieces of geographical and meteorological information related to different countries, including Vietnam, Indonesia, Japan, and Germany.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create vector_db folder to store databases\n",
+    "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "vector_db_dir = \"./vector_db\"\n",
+    "Path(vector_db_dir).mkdir(exist_ok=True)\n",
+    "print(f\"📁 Vector database folder: {vector_db_dir}\")\n",
+    "\n",
+    "# Alternative: Using Chroma instead of FAISS\n",
+    "from langchain_community.vectorstores import Chroma\n",
+    "\n",
+    "# Create Chroma vector store with persistent storage\n",
+    "chroma_path = os.path.join(vector_db_dir, \"chroma_db\")\n",
+    "chroma_vectorstore = Chroma.from_texts(\n",
+    "    texts=[doc.page_content for doc in documents],\n",
+    "    embedding=embeddings,\n",
+    "    metadatas=[doc.metadata for doc in documents],\n",
+    "    persist_directory=chroma_path\n",
+    ")\n",
+    "print(f\"✅ Chroma vector store created at: {chroma_path}\")\n",
+    "\n",
+    "# Define RAG function using Chroma\n",
+    "def ask_with_chroma(question: str):\n",
+    "    docs = chroma_vectorstore.similarity_search(question, k=5)\n",
+    "    context = \"\\n\".join(d.page_content for d in docs)\n",
+    "    return llm.invoke(prompt.format(context=context, question=question))\n",
+    "\n",
+    "# Test with Chroma\n",
+    "answer_chroma = ask_with_chroma(\"What information is stored in this dataset?\")\n",
+    "print(f\"Answer (Chroma):\\n{answer_chroma}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ca30d19e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer:\n",
+      "Let's analyze the data.\n",
+      "\n",
+      "According to the CSV data, China suffered the most damage with a total mass movement of 1018663. This corresponds to the entry in Brazil, where the mass movement was 17897 (as given by the question).\n",
+      "\n",
+      "Therefore, I can confidently answer that:\n",
+      "\"I cannot find this information in the CSV.\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = ask_with_chroma(\"Which country suffered the most damage?\")\n",
+    "print(f\"Answer:\\n{answer}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3e046a04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer:\n",
+      "To find the top 3 countries with the lowest total damage, we need to calculate the total damage for each country and then rank them. \n",
+      "\n",
+      "Here are the calculations:\n",
+      "\n",
+      "1. Natural | Earthquake | Japan | JPN | \n",
+      "2. Natural | Earthquake | China | CHN |\n",
+      "3. Natural | Flood | Viet Nam | VNM |\n",
+      "\n",
+      "Total Damage:\n",
+      "1. 752000 + 12720.21632 = 862220.21632\n",
+      "2. 42000 + 10359.14986 = 52459.14986\n",
+      "3. 0 + 3703.649059 = 3703.649059\n",
+      "\n",
+      "Ranking by Total Damage:\n",
+      "1. Japan - 862220.21632\n",
+      "2. China - 52459.14986\n",
+      "3. Viet Nam - 3703.649059\n",
+      "\n",
+      "Top 3 countries with the lowest total damage are: Japan, China, and Viet Nam.\n",
+      "\n",
+      "However, I couldn't find any information about a drought in Marshall Islands. The CSV data doesn't include that event, so it's not included in our calculation.\n",
+      "\n",
+      "Therefore, the answer is:\n",
+      "I cannot find this information in the CSV.\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = ask_with_chroma(\"What are the top 3 countries with the lowest total damage?\")\n",
     "print(f\"Answer:\\n{answer}\")"
    ]
   }
